Fix the display of the home tree and prediction page on mobile device

--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -1,4 +1,5 @@
 $borderColor: red;
+$itemColor: #5E5A5F;
 
 html, body {
   padding: 0;
@@ -24,59 +25,43 @@ body {
         opacity:0.1;
 }
 
-// .matchup-tree {
-//     border: 2px solid black;
-//     width: 600px;
-// }
-//
-// .matchup-table {
-//     line-height:30px;
-//     //background-color:#eeeeee;
-//     //height:60px;
-//     //width:100px;
-//     margin: 5px;
-//     display: table;
-//     //border: 2px solid black;
-// }
-//
-// .matchup-row {
-//     display: table-row;;
-// }
-//
+.home {
+        height: 100%;
+}
 .matchup-cell {
     display: table-cell;
     padding: 1px;
     vertical-align: middle;
     text-align: center;
-    //border: 2px solid black;
+    width: 33%;
+    height: 100%
 }
 
 .matchup {
-    //line-height:30px;
-    background-color:#eeeeee;
+    background-color:$itemColor;
     height:100%;
     width:100%;
-    //margin: 5px;
     display: block;
     border: 2px solid black;
     overflow: hidden;
+    color: white;
+    cursor: pointer;
 }
-
 
 .matchup .teams{
     display: flex;
     width: 100%;
     font-size: 50%;
-    //border: 2px solid black;
+    align-items: baseline;
+    height: 100%
 }
 
 .matchup .info{
     display: block;
-    //border: 2px solid black;
-    visibility: hidden;
-    width: 0;
-    height: 0;
-    line-height: 0;
+    //visibility: hidden;
+    //width: 0;
+    //height: 0;
+    //line-height: 0;
 }
 
 .matchup-img{
@@ -84,7 +69,6 @@ body {
     height: 100%;
     font-size: 10px;
 }
-
 
 .modal-dialog {
     .matchup-img{
@@ -96,7 +80,6 @@ body {
     .teams{
         display: table;
         width: 100%
-        //border: 2px solid black;
     }
 }
 
@@ -111,74 +94,208 @@ body {
 }
 
 .app {
-
-   margin:0;
-  padding:0;
-  height:100%;
-  width:100vw;
+        margin:0;
+        padding:0;
+        height:100%;
+        width:100vw;
 }
 
 #app {
-
-   margin:0;
-  padding:0;
-  height:100%;
-  width:100vw;
+        margin:0;
+        padding:0;
+        height:100%;
+        width:100vw;
 }
 
 .matchups {
-   border: 2px solid black;
-   //width: 600px;
-   overflow: hidden;
-   margin:0;
-  padding:0;
-  height:100%;
-  width:100%;
+        border: 2px solid black;
+        overflow: hidden;
+        margin:0;
+        padding:0;
+        height:100%;
+        width:100%;
 }
 
 .matchups .row{
-   //border: 2px solid black;
-   margin:0;
-  padding:0;
-  height:14%;
-  display: flex;
-  width: 100%;
-   //display: table-row;
-   //border: 2px solid black;
+        margin:0;
+        padding:0;
+        height:14%;
+        display: flex;
+        width: 100%;
+        max-height: 20px;
 }
 
 .matchups .cell{
-   //border: 2px solid black;
-   height:100%;
-   width:14%;
-   display: block;
-   //border: 1px solid black;
+        height:100%;
+        width:14%;
+        display: block;
+        width: 33%;
+        max-height: 20px;
+}
+
+.predictions {
+        display: block;
+        .header {
+                display: flex;
+                width: 100%;
+                .cell {
+                        width: 20%;
+                        display: flex;
+                        padding: 5px;
+                        text-align: center;
+                        max-width: 300px;
+                        //border: 2px solid black;
+                }
+
+                .round {
+                        width: 5%;
+                }
+
+                .teams {
+                        width: 45%;
+                }
+
+                .games {
+                        width: 20%;
+                }
+
+                .time-left {
+                        width: 30%;
+                }
+        }
+
+        .prediction {
+                display: flex;
+                //padding: 5px;
+                width: 100%;
+                .cell {
+                        width: 20%;
+                        display: flex;
+                        padding: 5px;
+                        text-align: center;
+                        max-width: 300px;
+                        //border: 2px solid black;
+                }
+
+                .round {
+                        width: 5%;
+                        align-items: center;
+                }
+
+                .teams {
+                        width: 45%;
+                        align-items: center;
+                }
+
+                .games {
+                        width: 20%;
+                        align-items: center;
+                }
+
+                .time-left {
+                        width: 30%;
+                        align-items: center;
+                }
+        }
+}
+
+.team-selector {
+        display: flex;
+        //background-color: $itemColor;
+        color: black;
+        width: 100%;
+        //border: 2px solid black;
+
+        .homeimg {
+           display: block;
+           border: 2px solid black;
+           background-color: $itemColor;
+           border-radius: 9px;
+           margin: 2px;
+           width: 33%;
+           max-height: 100px;
+           max-width: 100px;
+        }
+
+        .awayimg {
+           display: block;
+           border: 2px solid black;
+           background-color: $itemColor;
+           border-radius: 9px;
+           margin: 2px;
+           width: 33%;
+           max-height: 100px;
+           max-width: 100px;
+        }
+
+        .selected{
+                border: 3px solid red;
+                border-radius: 9px;
+        }
+
+        .results {
+           display: block;
+           font-size: 130%;
+           color: black;
+           align-self: center;
+           width: 33%;
+        }
+
+        @media (min-width: 800px) {
+                .results {
+                        font-size: 200%;
+                }
+        }
+}
+
+.team-rank {
+        position: relative;
+        left: 10%;
+        height: 0;
+        width: 0;
+        display: flex;
+        margin-top: 10%;
+        float: left;
+        color: #FFC107;
+        font-weight: bold;
+        font-size: 150%;
+        text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 @media (min-width: 800px) {
 .matchup .teams{
-    display: table;
-    width: 100%;
-    font-size: 100%;
-    //border: 2px solid black;
+        display: table;
+        width: 100%;
+        font-size: 100%;
 }
 
 .matchup .info{
-    display: table;
-    width: 100%;
-    height: auto;
-    visibility: visible;
-    line-height: 30px;
+        display: table;
+        width: 100%;
+        height: auto;
+        visibility: visible;
+        line-height: 30px;
 }
 .matchup-img{
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
+        //width: 50px;
+        //height: 50px;
+        max-height: 100px;
+        max-width: 100px;
+        font-size: 30px;
 }
-//.matchups .cell{
-   //border: 2px solid black;
-   //height:60px;
-   //width:100px;
-   //display: table-cell;
-//}
+.team-rank {
+        //margin-top: 15%;
+}
+
+.matchups .row{
+        max-height: 50px;
+}
+
+.matchups .cell{
+        max-height: 50px;
+}
 }
